--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,22 @@ body {
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 a {
     text-decoration: none;
     cursor: pointer;
 }
+
 header {
     width: 100%;
     height: 60px;
 }
+
 header nav {
     display: flex;
     justify-content: flex-end;
 }
+
 header nav .nav-right-section {
     width: 250px;
     height: auto;
@@ -24,10 +28,12 @@ header nav .nav-right-section {
     justify-content: center;
     align-items: center;
 }
+
 nav .nav-right-section a {
     margin-right: 10px;
     color: #000000;
 }
+
 nav .nav-right-section .menu-icon {
     background-image: url('https://static.thenounproject.com/png/756729-200.png');
     background-repeat: no-repeat;
@@ -36,20 +42,35 @@ nav .nav-right-section .menu-icon {
     width: 25px;
     height: 25px;
 }
+
 nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 10px;
 }
+
 main {
     text-align: center;
 }
+
 main .main-logo {
-    width: 530px;
+    width: 40%;
     margin: 0 auto;
     margin-bottom: 35px;
 }
+
 main .main-logo img {
-    width: 300px;
+    width: 60%;
+}
+
+@media (max-width: 600px) {
+    main .main-logo {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    main .main-logo img {
+        width: 90%;
+    }
 }
 
 main .main-input {
@@ -57,6 +78,8 @@ main .main-input {
     margin: 0 auto;
     margin-bottom: 35px;
 }
+
+
 main .main-input-container {
     width: 525px;
     border-radius: 100px;
@@ -65,6 +88,7 @@ main .main-input-container {
     justify-content: center;
     align-items: center;
 }
+
 main .main-input input {
     margin-left: 10px;
     font-size: 16px;
@@ -73,10 +97,12 @@ main .main-input input {
     border: none;
     outline: none;
 }
+
 main .main-input-container:hover {
     box-shadow: 0 1px 6px 0 #20212447;
     border-color: #dfe1e500;
 }
+
 main .main-input .search-icon {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Vector_search_icon.svg/945px-Vector_search_icon.svg.png');
     background-repeat: no-repeat;
@@ -85,6 +111,7 @@ main .main-input .search-icon {
     width: 18px;
     height: 18px;
 }
+
 main .main-input .micro-icon {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png');
     background-repeat: no-repeat;
@@ -94,51 +121,106 @@ main .main-input .micro-icon {
     height: 18px;
     cursor: pointer;
 }
-main .main-buttons{
-	width: 530px;
-	margin: 0 auto;
+
+@media (max-width: 768px) {
+    main .main-input {
+        width: 350px;
+        margin: 0 auto;
+        margin-bottom: 35px;
+    }
+
+    main .main-input-container {
+        width: 325px;
+    }
+
+    main .main-input input {
+        margin-left: 10px;
+        font-size: 16px;
+        width: 280px;
+        height: 40px;
+        border: none;
+        outline: none;
+    }
+
+    main .main-input .search-icon {
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Vector_search_icon.svg/945px-Vector_search_icon.svg.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        width: 12px;
+        height: 12px;
+    }
+
+    main .main-input .micro-icon {
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        width: 18px;
+        height: 18px;
+        cursor: pointer;
+    }
 }
-main .main-buttons div{
-	display: inline-block;
+
+main .main-buttons {
+    width: 530px;
+    margin: 0 auto;
 }
-main .main-buttons button{
-	height: 36px;
-	background-color: #f2f2f2;
-	border: 0;
-	font-size: 14px;
-	color: #5f6368;
-	border-radius: 5px;
-	padding: 0 15px;
+@media (max-width: 600px) {
+    main .main-buttons {
+        width: 300px;
+        margin: 0 auto;
+    }
 }
-main .main-buttons button:hover{
-	outline: 1px solid #c6c6c6;
-	box-shadow: 0 1px 1px gray;
+
+main .main-buttons div {
+    display: inline-block;
 }
-footer{
-	width: 100%;
-	height: 50px;
-	position: absolute;
-	bottom: 0;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	align-items: center;
-	font-size: 13px;
-	background-color: 1px solid #f2f2f2;
-	border-top: 1px solid #e4e4e4;
+
+main .main-buttons button {
+    height: 36px;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
 }
-footer ul{
-	margin: 10px;
-	list-style: none;
-	display: flex;
-	padding-left: 0;
+
+main .main-buttons button:hover {
+    outline: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px gray;
 }
-footer .footer-left{
-	justify-self: left;
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: 1px solid #f2f2f2;
+    border-top: 1px solid #e4e4e4;
 }
-footer .footer-right{
-	justify-self: right;
+
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
 }
-footer ul li a{
-	margin: 10px;
-	color: #5f6368;
+
+footer .footer-left {
+    justify-self: left;
+}
+
+footer .footer-right {
+    justify-self: right;
+}
+
+footer ul li a {
+    margin: 10px;
+    color: #5f6368;
 }
